--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="refresh" content="0; url=https://twitter.com/kasukacircle" />
     <title>KasukaCircle</title>
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="/favicon.png" type="img/png">
   </head>
   <body>
     <p>Redirecting...</p>
