--- a/index.html
+++ b/index.html
@@ -1,74 +1,44 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Tulisan Muncul Huruf per Huruf</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mengarahkan ke Tujuan...</title>
     <style>
       body {
         font-family: 'Arial', sans-serif;
         background: #1e1e1e;
         color: #fff;
+        margin: 0;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
-        margin: 0;
+        padding: 0;
         text-align: center;
-        padding: 20px;
-      }
-
-      .container {
-        max-width: 80%;
-        width: 100%;
-        padding: 20px;
-        box-sizing: border-box;
-        background: rgba(0, 0, 0, 0.7);
-        border-radius: 10px;
       }
 
       h1 {
-        font-size: 1.8rem;
-        overflow: hidden;
-        display: inline-block;
-        white-space: nowrap;
+        font-size: 2rem;
         margin: 0;
         padding: 0;
-        width: 0;
-        animation: typing 6s steps(50) 1s forwards, blinkCaret 0.75s step-end infinite;
       }
 
       p {
         margin-top: 20px;
-        font-size: 1rem;
+        font-size: 1.1rem;
         color: #ccc;
       }
-
-      @keyframes typing {
-        from {
-          width: 0;
-        }
-        to {
-          width: 100%;
-        }
-      }
-
-      @keyframes blinkCaret {
-        50% {
-          border-color: transparent;
-        }
-      }
-
-      /* Untuk responsif, agar teks berpindah ke baris berikutnya */
-      h1 {
-        display: block;
-        white-space: normal;
-      }
     </style>
+    <script>
+      window.location.replace("https://twitter.com/nama_akun_kamu");
+    </script>
+    <noscript>
+      <meta http-equiv="refresh" content="0; url=https://twitter.com/nama_akun_kamu" />
+    </noscript>
   </head>
   <body>
-    <div class="container">
-      <h1>苦しんでいる者たちに、そして苦しんでいる者たちにのみ、私はこれを捧げる。</h1>
-      <p>- Osamu Dazai, Tokyo Hakkei</p>
-    </div>
+    <h1>苦しんでいる者たちに、そして苦しんでいる者たちにのみ、私はこれを捧げる</h1>
+    <p>- Osamu Dazai</p>
   </body>
 </html>
