--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <style>
       body {
         font-family: 'Arial', sans-serif;
-        background: #1e1e1e;
-        color: #fff;
+        color: #000;
         margin: 0;
         display: flex;
         justify-content: center;
