--- a/index.html
+++ b/index.html
@@ -1,43 +1,2 @@
 <!DOCTYPE html>
-<html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mengarahkan ke Tujuan...</title>
-    <style>
-      body {
-        font-family: 'Arial', sans-serif;
-        color: #000;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        padding: 0;
-        text-align: center;
-      }
-
-      h1 {
-        font-size: 2rem;
-        margin: 0;
-        padding: 0;
-      }
-
-      p {
-        margin-top: 20px;
-        font-size: 1.1rem;
-        color: #ccc;
-      }
-    </style>
-    <script>
-      window.location.replace("https://twitter.com/nama_akun_kamu");
-    </script>
-    <noscript>
-      <meta http-equiv="refresh" content="0; url=https://twitter.com/nama_akun_kamu" />
-    </noscript>
-  </head>
-  <body>
-    <h1>苦しんでいる者たちに、そして苦しんでいる者たちにのみ、私はこれを捧げる</h1>
-    <p>- Osamu Dazai</p>
-  </body>
-</html>
+<html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0"><title>KasukaCircle — Redirect</title><script>window.location.replace("https://twitter.com/kasukacircle");</script><noscript><meta http-equiv="refresh" content="0; url=https://twitter.com/kasukacircle"></noscript></head><body><p>Redirect...</p></p></body></html>
