--- a/404.html
+++ b/404.html
@@ -14,8 +14,7 @@
   </style>
 </head>
 <body>
-  <h1>Oops! Halaman tidak ditemukan</h1>
-  <p>Mungkin kamu lupa taruh link-nya, atau URL-nya salah.</p>
-  <a href="/">Kembali ke Beranda</a>
+  <h1>404 Not Found</h1>
+  <p>The path you requested does not exist on this site.</p>
 </body>
 </html>
