--- a/404.html
+++ b/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Halaman Tidak Ditemukan</title>
+  <title>Page Not Found</title>
   <style>
     body {
       font-family: sans-serif;
       text-align: center;
-      padding: 50px;
+      padding: 40px;
       background-color: #f2f2f2;
     }
   </style>
